--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,7 +15,14 @@ body {
   color: #bbb;
   font-size: 15px;
 }
+input{
+  outline: none;
+  &:focus{
+    outline: none;
+    
 
+  }
+}
 a {
   text-decoration: none;
   color: inherit;
